es2gears_wayland crashes on exit.
To reproduce:
- launch es2gears_wayland
- in es2gears menu: select QUIT
- crash
Thread 1 "es2gears_waylan" received signal SIGSEGV, Segmentation fault.
0x00007ffff7e9fddb in wl_proxy_marshal_flags () from /lib/x86_64-linux-gnu/libwayland-client.so.0
(gdb) where
#0 0x00007ffff7e9fddb in wl_proxy_marshal_flags () from /lib/x86_64-linux-gnu/libwayland-client.so.0
#1 0x000055555555b8b5 in wl_compositor_create_region (wl_compositor=0x555555567df0) at /usr/include/wayland-client-protocol.h:1309
#2 0x000055555555c3a4 in draw (window=0x555555560280 <window>) at ../src/egl/eglut/eglut_wayland.c:234
#3 0x000055555555c4cf in _eglutNativeEventLoop () at ../src/egl/eglut/eglut_wayland.c:268
#4 0x000055555555b39d in eglutMainLoop () at ../src/egl/eglut/eglut.c:267
#5 0x000055555555a9a9 in main (argc=1, argv=0x7fffffffde78) at ../src/egl/opengles2/es2gears.c:719
I have a pull request with a fix incoming.