eglut_wayland: terminate mainloop on display-close

When we're closing the native display, we can't really keep processing
events. Let's terminate the mainloop to prevent crashes.

It's not clear to me why this used to work, but it seems like *somehow*
the frame-callback saved us.

Fixes: 12ff8b7b ("eglut_wayland: do not use frame-listener")
Closes: https://gitlab.freedesktop.org/mesa/demos/-/issues/28
Reviewed-by: Hoe Hao Cheng <haochengho12907@gmail.com>